added bootstrap to the signup form and fixed create new user so that UID autoincrements. updated the insert test users sql file to use this.

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -9,6 +9,9 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
+- url: /assets/bootstrap
+  static_dir: assets/bootstrap
+
 - url: .*
   script: main.app
 
