--- a/server/app.yaml
+++ b/server/app.yaml
@@ -15,6 +15,10 @@ handlers:
 - url: .*
   script: main.app
 
+- url: /page/img\.png
+  static_dir: page/img\.png
+
+
 libraries:
 - name: webapp2
   version: "2.5.1"
