--- a/server/app.yaml
+++ b/server/app.yaml
@@ -15,11 +15,12 @@ handlers:
 - url: /assets/components
   static_dir: assets/components
 
+- url: /img
+  static_dir: pages/img
+
 - url: .*
   script: main.app
 
-- url: /page/img\.png
-  static_dir: page/img\.png
 
 
 libraries:
