--- a/server/app.yaml
+++ b/server/app.yaml
@@ -21,6 +21,9 @@ handlers:
 - url: .*
   script: main.app
 
+- url: /contact\.html
+  static_dir: pages/contact
+
 libraries:
 - name: webapp2
   version: "2.5.1"
